--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.16.0",
     "express": "^4.12.3",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.29.0",
@@ -20,7 +24,8 @@
     "supertest": "^1.0.0"
   },
   "scripts": {
-    "start": "node app.js",
+    "edit": "swagger project edit",
+    "start": "swagger project start",
     "test": "swagger project test"
   }
 }
