--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.29.0",
     "sequelize-cli": "^2.5.1",
-    "swagger-express-mw": "^0.1.0"
+    "swagger-express-mw": "^0.1.0",
+    "winston": "^2.3.0"
   },
   "devDependencies": {
     "should": "^7.1.0",
