--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "express": "^4.12.3",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
@@ -20,7 +21,7 @@
     "supertest": "^1.0.0"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "swagger project start",
     "test": "swagger project test"
   }
 }
