--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "express": "^4.12.3",
+    "jwt-simple": "^0.5.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^6.1.2",
