--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.12.3",
     "jwt-simple": "^0.5.1",
     "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
