--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
   "scripts": {
     "edit": "swagger project edit",
     "start": "swagger project start",
-    "test": "swagger project test"
+    "test": "NODE_ENV=test swagger project test"
   }
 }
