--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "app.js",
   "dependencies": {
     "bcrypt": "^1.0.2",
+    "compose-middleware": "^2.2.0",
     "express": "^4.12.3",
     "jwt-simple": "^0.5.1",
     "passport": "^0.3.2",
