--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "edit": "swagger project edit",
     "lint": "eslint app api models initializers",
-    "lint-test": "eslint -c .eslintrc-test.js test",
+    "lint-test": "eslint --config test/.eslintrc.js test",
     "start": "swagger project start",
     "test": "NODE_ENV=test swagger project test"
   }
