package.json: removing redundant "seeds" script with breaking trailing comma

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "scripts": {
     "edit": "swagger project edit",
     "start": "swagger project start",
-    "test": "NODE_ENV=test swagger project test",
-    "seeds": "sequelize db:seed --seed seeders/*",
+    "test": "NODE_ENV=test swagger project test"
   }
 }
