Restore config.json for sequelize, use DB_URL

--- a/.env.development.example
+++ b/.env.development.example
@@ -1,6 +1,2 @@
-DB_USERNAME=props_node
-DB_PASSWORD=
-DB_DATABASE=props_node_development
-DB_HOST=127.0.0.1
-DB_DIALECT=postgres
+DB_URL=postgres://props_node:@localhost/props_node_development
 JWT_TOKEN=secret
