Sequelize config: updated example .env.* files, better config sourcing them properly.

--- a/.env.test.example
+++ b/.env.test.example
@@ -1,3 +1,6 @@
-DB_URL=postgres://props_node:@localhost/props_node_test
+DB_USERNAME=root
+DB_PASSWORD=
+DB_DATABASE=database_test
+DB_HOST=127.0.0.1
 JWT_TOKEN=secret
 TOKEN_EXPIRATION_TIME=604800000
