--- a/.env.development.example
+++ b/.env.development.example
@@ -1,3 +1,6 @@
-DB_URL=postgres://props_node:@localhost/props_node_development
+DB_USERNAME=root
+DB_PASSWORD=
+DB_DATABASE=database_development
+DB_HOST=127.0.0.1
 JWT_TOKEN=secret
 TOKEN_EXPIRATION_TIME=604800000
