Update bardzusny homepage

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "contributors": [
     "Justyna Rachowicz <justyna.rachowicz@netguru.co> (https://github.com/mrowa44)",
     "Justyn Jóźwiak <justyn.jozwiak@netguru.co> (https://github.com/justynjozwiak)",
-    "Adrian Zalewski <adrian.zalewski@netguru.co> (https://github.com/bardzusny)",
+    "Adrian Zalewski <adrian.zalewski@netguru.co> (https://bardzusny.lol)",
     "Rafał Wiliński <rafal.wilinski@netguru.co> (http://rwilinski.me)"
   ],
   "license": "MIT",
