--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.29.0",
     "sequelize-cli": "^2.5.1",
-    "swagger-express-mw": "^0.1.0",
+    "swagger-express-mw": "^0.1.0"
   },
   "devDependencies": {
     "eslint": "^3.14.1",
