--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "description": "Netguru Node.JS REST API starter app",
-  "keywords": ["node", "starter", "rest", "api", "netguru", "swagger"],
+  "keywords": [
+    "node",
+    "starter",
+    "rest",
+    "api",
+    "netguru",
+    "swagger"
+  ],
   "author": {
     "name": "Netguru",
     "email": "nodejs@netguru.co",
@@ -13,8 +20,8 @@
     "node": "6.9.4"
   },
   "bugs": {
-    "url" : "https://github.com/netguru/ng-node-starter-app/issues",
-    "email" : "nodejs@netguru.co"
+    "url": "https://github.com/netguru/ng-node-starter-app/issues",
+    "email": "nodejs@netguru.co"
   },
   "contributors": [
     "Justyna Rachowicz <justyna.rachowicz@netguru.co> (https://github.com/mrowa44)",
@@ -45,6 +52,7 @@
     "swagger-express-mw": "^0.1.0"
   },
   "devDependencies": {
+    "bunyan-prettystream": "^0.1.3",
     "eslint": "^3.14.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
