--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "eslint": "^3.14.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
     "should": "^7.1.0",
     "supertest": "^1.0.0"
   },
@@ -66,6 +68,7 @@
     "migrate": "./node_modules/.bin/sequelize db:migrate",
     "seed": "./node_modules/.bin/sequelize db:seed:all",
     "create-migration": "./node_modules/.bin/sequelize migration:create",
-    "create-seed": "./node_modules/.bin/sequelize seed:create"
+    "create-seed": "./node_modules/.bin/sequelize seed:create",
+    "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -u exports -R spec test/**/*.js"
   }
 }
