--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,7 @@ dependencies:
     - npm install -g swagger sequelize-cli
 test:
   pre:
+    - cp .env.test.example .env.test
     - createdb database_test
     - sequelize db:migrate
   override:
