CircleCI config: use npm script for launching tests

--- a/circle.yml
+++ b/circle.yml
@@ -1,13 +1,15 @@
 machine:
   node:
     version: 6.9.2
+
 dependencies:
   post:
     - npm install -g swagger sequelize-cli
+
 test:
   pre:
     - cp .env.test.example .env.test
     - createdb database_test
     - sequelize db:migrate
   override:
-    - swagger project test
+    - npm test
