--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "scripts": {
     "edit": "swagger project edit",
     "start": "swagger project start",
-    "test": "NODE_ENV=test swagger project test"
+    "lint": "eslint .",
+    "test": "npm run lint && NODE_ENV=test swagger project test"
   }
 }
