--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,4 @@ test:
   override:
     - npm test
   post:
-    - ./deploy.sh staging $CIRCLE_SHA1
+    - ./deploy.sh ng-node-starter-app-twp staging us-east-1 $CIRCLE_SHA1
