--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^3.14.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
+    "mocha": "^3.2.0",
     "should": "^7.1.0",
     "supertest": "^1.0.0"
   },
@@ -55,6 +56,6 @@
     "edit": "swagger project edit",
     "start": "swagger project start",
     "lint": "eslint .",
-    "test": "npm run lint && NODE_ENV=test swagger project test"
+    "test": "npm run lint && NODE_ENV=test mocha --recursive"
   }
 }
